# homework

./: CMakeLists.txt  README.md  main.cpp
calculation/: BinaryCalculator.cpp  BinaryCalculator.h
inteface/: Interface.cpp  Interface.h
numerics/: NumericChecker.cpp  NumericChecker.h
reading/: NumbersReader.cpp  NumbersReader.h
separate/: Separator.cpp  Separator.h
test/: Tests.h  doctest.h
